--- a/packages/stateofjs/lib/surveys/yml/js2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2021outline.yml
@@ -336,8 +336,6 @@ outline:
         year: 2021
       - id: wmr
         year: 2021
-      - id: turborepo
-        year: 2021
 
       - id: build_tools
         intlId: tools.other_tools
@@ -348,82 +346,36 @@ outline:
         template: happiness
         sectionSlug: happiness
 
-  ######################################################
-  #########               TOOLING              #########
-  ######################################################
-
-  - id: tooling
-    slug: tools_others
+  - id: monorepo_tools
+    template: tool
+    slug: tools
+    year: 2021
     questions:
-      - id: utilities
-        template: multiple
-        options:
-          - id: babel
-          - id: prettier
-          - id: eslint
-          - id: nvm
-          - id: "n"
-          - id: nx
-          - id: zx
-            year: 2021
-          - id: volta
-            year: 2021
-      - id: utilities
-        template: project
-
-      - id: runtimes
-        template: multiple
-        options:
-          - id: browser_environment
-          - id: node
-          - id: deno
-          - id: chakracore
-          - id: hermes
-          - id: service_workers
-            year: 2021
-          - id: serverless_workers
-            year: 2021
-      - id: runtimes
-        template: others
-        matchTags: [libraries, other]
-
-      - id: package_management
+      - id: rush
         year: 2021
-        template: multiple
-        options:
-          - id: npm
-          - id: pnpm
-          - id: yarn
-      - id: package_management
+      - id: turborepo
         year: 2021
-        template: project
-
-      - id: package_registries
+      - id: yarn_workspaces
         year: 2021
-        template: multiple
-        options:
-          - id: npm
-          - id: github
-          - id: jspm
-          - id: private_registry
-      - id: package_registries
+      - id: yalc
         year: 2021
-        template: project
+      - id: lerna
+        year: 2021
+      - id: npm_workspaces
+        year: 2021
+      - id: pnpm
+        year: 2021
+      - id: nx
+        year: 2021
 
       - id: monorepo_tools
-        year: 2021
-        template: multiple
-        options:
-          - id: rush
-          - id: turborepo
-          - id: yarn
-          - id: yalc
-          - id: lerna
-          - id: npm
-          - id: nx
-      - id: monorepo_tools
-        year: 2021
+        intlId: tools.other_tools
         template: project
+        sectionSlug: tools_others
+      - id: monorepo_tools
+        intlId: tools.happiness
+        template: happiness
+        sectionSlug: happiness
 
   ######################################################
   #########             OTHER TOOLS            #########
@@ -450,6 +402,60 @@ outline:
           - id: stdlib
       - id: libraries
         template: project
+
+      - id: utilities
+        template: multiple
+        options:
+          - id: babel
+          - id: prettier
+          - id: eslint
+          - id: nvm
+          - id: "n"
+          - id: zx
+            year: 2021
+          - id: volta
+            year: 2021
+      - id: utilities
+        template: project
+
+      - id: runtimes
+        template: multiple
+        options:
+          - id: browser_environment
+          - id: node
+          - id: deno
+          - id: chakracore
+          - id: hermes
+          - id: service_workers
+            year: 2021
+          - id: serverless_workers
+            year: 2021
+      - id: runtimes
+        template: others
+        matchTags: [libraries, other]
+
+      # - id: package_management
+      #   year: 2021
+      #   template: multiple
+      #   options:
+      #     - id: npm
+      #     - id: pnpm
+      #     - id: yarn
+      # - id: package_management
+      #   year: 2021
+      #   template: project
+
+      # - id: package_registries
+      #   year: 2021
+      #   template: multiple
+      #   options:
+      #     - id: npm
+      #     - id: github
+      #     - id: jspm
+      #     - id: private_registry
+      # - id: package_registries
+      #   year: 2021
+      #   template: project
 
       - id: javascript_flavors
         year: 2021
@@ -497,42 +503,42 @@ outline:
         template: others
         matchTags: [languages]
 
-      - id: browsers
-        template: multiple
-        options:
-          - id: edge
-          - id: chrome
-          - id: safari
-          - id: firefox
-          - id: internet_explorer_11
-          - id: internet_explorer_8_9_10
-          - id: opera_mini
-          - id: safari_ios
-          - id: chrome_ios
-          - id: chrome_android
-          - id: firefox_android
-          - id: samsung_internet
-          - id: vivaldi
-          - id: brave
-          - id: ucbrowser
-          - id: opera
-          - id: polypane
+      # - id: browsers
+      #   template: multiple
+      #   options:
+      #     - id: edge
+      #     - id: chrome
+      #     - id: safari
+      #     - id: firefox
+      #     - id: internet_explorer_11
+      #     - id: internet_explorer_8_9_10
+      #     - id: opera_mini
+      #     - id: safari_ios
+      #     - id: chrome_ios
+      #     - id: chrome_android
+      #     - id: firefox_android
+      #     - id: samsung_internet
+      #     - id: vivaldi
+      #     - id: brave
+      #     - id: ucbrowser
+      #     - id: opera
+      #     - id: polypane
 
-      - id: form_factors
-        template: multiple
-        options:
-          - id: desktop
-          - id: smartphone
-          - id: feature_phone
-          - id: tablet
-          - id: smart_watch
-          - id: tv
-          - id: gaming_console
-          - id: screen_reader
-          - id: print
-          - id: keyboard_only
-          - id: testing_tools
-          - id: vision_simulator
+      # - id: form_factors
+      #   template: multiple
+      #   options:
+      #     - id: desktop
+      #     - id: smartphone
+      #     - id: feature_phone
+      #     - id: tablet
+      #     - id: smart_watch
+      #     - id: tv
+      #     - id: gaming_console
+      #     - id: screen_reader
+      #     - id: print
+      #     - id: keyboard_only
+      #     - id: testing_tools
+      #     - id: vision_simulator
 
       - id: tool_evaluation
         year: 2021
@@ -679,9 +685,9 @@ outline:
         options:
           - id: state_management
           - id: architecture
-          - id: consuming_packages
+          - id: finding_packages
           - id: debugging
-          - id: dependencies
+          - id: managing_dependencies
           - id: async_code
           - id: writing_modules
           - id: date_management
