--- a/packages/stateofjs/lib/surveys/yml/js2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2021outline.yml
@@ -415,6 +415,8 @@ outline:
             year: 2021
           - id: volta
             year: 2021
+          - id: verdaccio
+            year: 2021
       - id: utilities
         template: project
 
@@ -461,7 +463,6 @@ outline:
         year: 2021
         template: multiple
         options:
-          - id: plain_javascript
           - id: typescript
           - id: reason
           - id: flow
@@ -699,7 +700,6 @@ outline:
 
       - id: currently_missing_from_js
         year: 2021
-        optionsIntlId: features
         template: bracket
         options:
           - id: static_typing
