Get survey ready

--- a/packages/stateofjs/lib/surveys/yml/css2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2020outline.yml
@@ -15,7 +15,7 @@ prettySlug: state-of-css
 hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 resultsUrl: https://2020.stateofcss.com/
-name: 'State of CSS'
+name: 'State of CSS 2020'
 year: 2020
 status: 3 # closed
 imageUrl: 'stateofcss2020.png'
