--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -14,7 +14,7 @@ prettySlug: state-of-css
 hashtag: StateOfCSS
 shareUrl: https://stateofcss.com
 resultsUrl: https://2021.stateofcss.com/
-name: 'State of CSS'
+name: 'State of CSS 2021'
 year: 2021
 status: 3 # preview/open/closed
 imageUrl: 'stateofcss2021.png'
