--- a/packages/stateofjs/lib/surveys/yml/js2019outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2019outline.yml
@@ -14,7 +14,7 @@ prettySlug: state-of-js
 hashtag: StateOfJS
 shareUrl: https://stateofjs.com
 resultsUrl: https://2019.stateofjs.com/
-name: 'State of JavaScript'
+name: 'State of JavaScript 2019'
 year: 2019
 status: 3 # closed
 imageUrl: 'stateofjs2019.png'
