--- a/packages/stateofjs/lib/surveys/yml/js2020outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2020outline.yml
@@ -15,7 +15,7 @@ prettySlug: state-of-js
 hashtag: StateOfJS
 shareUrl: https://stateofjs.com
 resultsUrl: https://2020.stateofjs.com/
-name: 'State of JavaScript'
+name: 'State of JavaScript 2020'
 year: 2020
 status: 3 # closed
 imageUrl: 'stateofjs2020.png'
