--- a/packages/stateofjs/lib/surveys/yml/js2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2021outline.yml
@@ -16,6 +16,11 @@ bgColor: rgb(34, 36, 41)
 textColor: rgb(224, 228, 228)
 linkColor: rgb(65, 199, 199)
 hoverColor: rgb(254, 106, 106)
+credits:
+  - id: shawn_wang
+    role: survey_design
+  - id: mark_erikson
+    role: survey_design
 outline:
   ######################################################
   #########              FEATURES              #########
