--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-addons-pure-render-mixin": "^15.6.3",
-    "react-bootstrap": "2.0.0-rc.0",
+    "react-bootstrap": "2.1.0",
     "react-bootstrap-typeahead": "^5.2.0",
     "react-confetti": "^6.0.1",
     "react-cookie": "^4.1.1",
@@ -127,7 +127,8 @@
     "tracker-component": "^1.3.21",
     "underscore": "^1.13.1",
     "universal-cookie-express": "^4.0.3",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^8.3.2"
   },
   "private": true,
   "devDependencies": {
