Add intro/help messages

--- a/packages/stateofjs/lib/surveys/yml/js2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/js2021outline.yml
@@ -36,8 +36,8 @@ outline:
     slug: features
     questions:
 
-      # - id: features_intro
-      #   template: help
+      - id: features_intro
+        template: help
 
       # removed in 2021
       # - id: async_await
@@ -157,8 +157,8 @@ outline:
     slug: tools
     questions:
 
-      # - id: tools_intro
-      #   template: help
+      - id: tools_intro
+        template: help
 
       - id: react
       - id: vuejs
