--- a/package.json
+++ b/package.json
@@ -125,10 +125,10 @@
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.0",
     "tracker-component": "^1.3.21",
+    "ulidx": "^0.3.0",
     "underscore": "^1.13.1",
     "universal-cookie-express": "^4.0.3",
-    "url": "^0.11.0",
-    "uuid": "^8.3.2"
+    "url": "^0.11.0"
   },
   "private": true,
   "devDependencies": {
