Close JS 2021 survey

--- a/packages/stateofjs/lib/surveys/yml/css2021outline.yml
+++ b/packages/stateofjs/lib/surveys/yml/css2021outline.yml
@@ -379,7 +379,7 @@ outline:
 
       - id: first_steps
         template: others
-        matchTags: [css_first_steps, courses, people, youtube, sites, newsletters, socialmedia]
+        matchTags: [first_steps, courses, people, youtube, sites, newsletters, socialmedia]
 
       - id: blogs_news_magazines
         template: multiple
